--- a/Homework_1/index.html
+++ b/Homework_1/index.html
@@ -52,9 +52,8 @@
       <div class="item3">
         <h5>Summary</h5>
         <p class="summary">
-          Lorem ipsum dolor, sit amet consectetur adipisicing elit. Dolorem
-          harum reiciendis nobis numquam, ipsa sed veritatis obcaecati dicta ut
-          nam.
+          My Name is Berkay Kulak. I Am a third year computer engineering
+          student.
         </p>
       </div>
 
